claude-projects/2026 Builder Org/force-app/main/default/objects/OrgPerson__c/OrgPerson__c.object-meta.xml
<CustomObject>
    <label>Org Person</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org People</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>