claude-projects/2026 Builder Org/force-app/main/default/objects/OrgPerson__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>OrgPerson__c</referenceTo>
    <relationshipLabel>Direct Reports</relationshipLabel>
    <relationshipName>DirectReports</relationshipName>
    <type>Lookup</type>
</CustomField>