claude-projects/2026 Builder Org/force-app/main/default/objects/OrgPerson__c/fields/Org62Id__c.field-meta.xml
<CustomField>
    <fullName>Org62Id__c</fullName>
    <externalId>true</externalId>
    <label>Org62 ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>