claude-projects/2026 Builder Org/force-app/main/default/objects/OrgPerson__c/fields/PositionX__c.field-meta.xml
<CustomField>
    <fullName>PositionX__c</fullName>
    <label>Canvas Position X</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>