claude-projects/2026 Builder Org/force-app/main/default/objects/OrgPerson__c/fields/PositionY__c.field-meta.xml
<CustomField>
    <fullName>PositionY__c</fullName>
    <label>Canvas Position Y</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>