claude-projects/2026 Builder Org/force-app/main/default/objects/OrgPerson__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>People Manager</fullName>
            </value>
            <value>
                <fullName>Individual Contributor</fullName>
            </value>
            <value>
                <fullName>Executive Assistant</fullName>
            </value>
            <value>
                <fullName>FuturForce Intern</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>