claude-projects/2026 Builder Org/force-app/main/default/objects/OrgPerson__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Seat</fullName>
                <default>true</default>
                <label>In-Seat</label>
            </value>
            <value>
                <fullName>Backfill</fullName>
            </value>
            <value>
                <fullName>Net New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>