claude-projects/2026 Builder Org/force-app/main/default/objects/OrgPerson__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account SE</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Strategic SE</fullName>
            </value>
            <value>
                <fullName>Technical Architect</fullName>
            </value>
            <value>
                <fullName>Enterprise Architect</fullName>
            </value>
            <value>
                <fullName>BVS</fullName>
            </value>
            <value>
                <fullName>Industry Advisor</fullName>
            </value>
            <value>
                <fullName>BizCon</fullName>
            </value>
            <value>
                <fullName>Deployment Strategist</fullName>
            </value>
            <value>
                <fullName>FDE</fullName>
            </value>
            <value>
                <fullName>Graduate Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>