claude-projects/2026 Builder Org/force-app/main/default/objects/OrgPerson__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solutions</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>